[package]
name = "ironfetch"
version = "0.7.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
measurements = { version = "*", features = ["serde"] }
nix = { version="*", features = ["feature"]}
os-release = "*"
procfs = { version = "*", features = ["serde1"] }
sys-info = "*"
uptime_lib = "*"
thiserror = "*"
udev = "*"
futures = "*"
udisks2 = "*"
serde = "*"
serde_json = "*"
upower_dbus = "*"
zbus = "3.7.0"

[build-dependencies]
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
clap_mangen = "*"
serde = "*"

[lints.clippy]
pedantic = {level="warn", priority = 0}
must_use_candidate = {level="allow", priority = 1}
unwrap_used = {level="warn", priority = 3}
stable_sort_primitive = {level="allow", priority = 2}
