[package]
name = "ironfetch"
version = "0.8.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.*.*", features = ["derive"] }
nix = { version="0.30.*", features = ["feature"]}
os-release = "0.1.*"
procfs = "0.17.*"
sys-info = "0.9.*"
uptime_lib = "0.3.*"
thiserror = "2.*.*"
futures = "0.3.*"
serde = { version = "1.*.*", features = [ "derive" ] }
serde_json = "1.0.*"
zbus = "5.6"
fetch_derive = { path = "fetch_derive" }
derive_more = {version = "2.0.1", features = ["display"]}
serde_repr = "0.1.20"
ppd = "0.1.4"

[target.'cfg(target_os = "linux")'.dependencies]
udisks2 = "0.3.*"
udev = "0.9.*"
memdev = { git = "https://github.com/lyndeno/memdev.git", version = "0.1.*", features = ["serde"]}

[build-dependencies]
clap = { version = "4.*.*", features = ["derive"] }
clap_complete = "4.*.*"
clap_mangen = "0.2.*"
serde = { version = "1.*.*", features = [ "derive" ] }

[lints.clippy]
pedantic = {level="warn", priority = 0}
must_use_candidate = {level="allow", priority = 1}
unwrap_used = {level="warn", priority = 3}
stable_sort_primitive = {level="allow", priority = 2}
